create hero for home page and fix headers

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,8 @@
-$color-primary: #419a1c;
-$color-secondary: #005a6c;
-$color-tertiary: #282c34;
+$color-one: #50b2c0;
+$color-two: #feefdd;
+$color-three: #faaa8d;
+$color-four: #ff4000;
+$color-five: #201e1f;
 
 $color-white: #fff;
 $color-black: #000;
