--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -2,18 +2,28 @@
 
 .header {
     height: 60px;
-    background: $color-primary;
+    background: $color-one;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 1rem;
+    color: $color-white;
+    padding: 0px 2rem;
+
+    &.transparent {
+        background: transparent;
+    }
+
+    &__title {
+        color: $color-white;
+        text-decoration: none;
+    }
 
     &__links {
         display: flex;
         list-style-type: none;
         
         &-link {
-            margin-right: 1rem;
+            margin-left: 1rem;
             text-decoration: none;
             color: $color-white;
 
@@ -25,6 +35,6 @@
 }
 
 .selected {
-    color: $color-black;
-    border-bottom: 2px solid $color-black;
+    color: $color-two;
+    border-bottom: 2px solid $color-two;
 }
