--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -10,3 +10,8 @@ $color-black: #000;
 $color-gray-dark: #808080;
 $color-gray-normal: #A9A9A9;
 $color-gray-light: #D3D3D3;
+
+$bp-small: 400px;
+$bp-medium: 700px;
+$bp-large: 1000px;
+$bp-xl: 1300px;
