--- a/src/components/Home/Main/Main.scss
+++ b/src/components/Home/Main/Main.scss
@@ -1,10 +1,10 @@
 @import '../../../sass/variables.scss';
 
 .main {
-    margin-top: 2rem;
+    margin: 5rem 0;
     display: grid;
     grid-template-columns: auto;
-    grid-gap: 1rem;
+    grid-gap: 1.5rem;
     justify-content: center;
 
 
