--- a/src/components/Home/Features/Features.scss
+++ b/src/components/Home/Features/Features.scss
@@ -7,7 +7,7 @@
 .features {
     display: flex;
     margin: 0 auto;
-    height: 500px;
+    min-height: 600px;
     max-width: 1000px;
     justify-content: space-evenly;
     align-items: center;
